hphp/test/zend/good/ext/calendar/tests/bug55797_1.php
<?php
$x = 882858030;

var_dump(cal_from_jd($x, CAL_GREGORIAN));